added jvm parameter to avoid warnings